--- a/CI_CD/.github/workflows/test.yaml
+++ b/CI_CD/.github/workflows/test.yaml
@@ -7,4 +7,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} events."
-      - run: py main.py
+      - run: python main_test.py
