--- a/CI_CD/.github/workflows/python-publish.yml
+++ b/CI_CD/.github/workflows/python-publish.yml
@@ -22,6 +22,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: python main.py
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
