--- a/CI_CD/.github/workflows/citest.yaml
+++ b/CI_CD/.github/workflows/citest.yaml
@@ -6,5 +6,5 @@ jobs:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
-      - run: echo " The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: python main.py
