--- a/CI_CD/.github/workflows/citest.yaml
+++ b/CI_CD/.github/workflows/citest.yaml
@@ -3,7 +3,7 @@ name: Github Actions Demo
 on: [ push ]
 jobs:
   Test:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
